--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 
 {{content}}
 
-<div id="related">
+<div >
   <h2>Related Posts</h2>
   <ul class="posts">
     {% for post in site.pages %}
@@ -18,7 +18,7 @@ layout: default
   </ul>
 </div>
 
-<div id="related">
+<div >
   <h2>Related Posts</h2>
   <ul class="posts">
     {% for post in site.related_posts limit:3 %}
@@ -31,7 +31,7 @@ layout: default
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
 
-<div id="related">
+<div >
   <h2>Related Posts</h2>
   <ul class="posts">
     {% for post in site.categories["nodejs"] %}
@@ -40,7 +40,7 @@ layout: default
   </ul>
 </div>
 
-<div id="related">
+<div >
   <h2>Related Posts</h2>
   <ul class="posts">
     {% for post in site.tags["options"] %}
