--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,3 +12,35 @@ layout: default
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
 {% endif %}
+
+
+<div >
+  <h2>Related Posts</h2>
+  <ul class="posts">
+    {% for post in site.related_posts limit:3 %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
+
+<!-- 
+
+
+
+<div >
+  <h2>Related Posts</h2>
+  <ul class="posts">
+    {% for post in site.categories["nodejs"] %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
+
+<div >
+  <h2>Related Posts</h2>
+  <ul class="posts">
+    {% for post in site.tags["options"] %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul> 
+</div>-->
