Signed-off-by: ljyeso <ljyes@outlook.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@ layout: default
   </ul>
 </div>
 
-<!-- 
+--- 
 <div >
   <h2>Related Posts</h2>
   <ul class="posts">
@@ -40,4 +40,4 @@ layout: default
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul> 
-</div>-->
+</div>
