Signed-off-by: ljyeso <ljyes@outlook.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,8 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile {{ site.github.owner_name }}</a></p>
         {% endif %}
 
+        {% include cloud.html %}
+        
       </header>
       <section>
 
