--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,29 @@
 ---
 
 @import "jekyll-theme-minimal";
+
+.cloud { width: 100%; clear: both; overflow: hidden }
+.cloud h3 { font-size: 14px; color: #666; border-bottom: 1px solid #E6E6E6; padding: 5px 0; margin-bottom: 10px }
+.cloud ul { display: flex; flex-flow: row wrap; justify-content:space-between; padding-left: 0;}
+.cloud ul li { font-size: 13px; display: inline-block; padding: 2px 4px; margin-bottom: 5px; border-radius: 6px; background: #999; transition: all 0.5s; }
+.cloud ul li a { color: #FFF }
+.cloud ul li:nth-child(8n-7) { background: #8A9B0F }
+.cloud ul li:nth-child(8n-6) { background: #EB6841 }
+.cloud ul li:nth-child(8n-5) { background: #3FB8AF }
+.cloud ul li:nth-child(8n-4) { background: #FE4365 }
+.cloud ul li:nth-child(8n-3) { background: #FC9D9A }
+.cloud ul li:nth-child(8n-2) { background: #EDC951 }
+.cloud ul li:nth-child(8n-1) { background: #C8C8A9 }
+.cloud ul li:nth-child(8n) { background: #83AF9B }
+.cloud ul li:first-child { background: #036564 }
+.cloud ul li:last-child { background: #3299BB }
+.cloud ul li:hover { border-radius: 0; text-shadow: #000 1px 1px 1px }
+
+/*友情          链接*/
+.links { width: 100%; overflow: hidden; clear: both }
+.links h3 { font-size: 14px; color: #666; border-bottom: 1px solid #E6E6E6; padding: 5px 0; margin-bottom: 10px;}
+.links h3 span { float: right; font-size: 12px; }
+.links h3 span a { color: #999; padding: 0 5px; vertical-align: middle;}
+.links h3 span a:hover { color: #F60; text-decoration: underline }
+.links ul { display: flex; flex-flow: row wrap; justify-content:space-between; padding-left: 0; border: #e9e9e9 1px solid; background: #f9f9f9; }
+.links ul li { isplay: inline-block;padding: 2px 4px; font-size: 13px; }
