--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,4 +27,10 @@
 .links h3 span a { color: #999; padding: 0 5px; vertical-align: middle;}
 .links h3 span a:hover { color: #F60; text-decoration: underline }
 .links ul { display: flex; flex-flow: row wrap; justify-content:space-between; padding-left: 0; border: #e9e9e9 1px solid; background: #f9f9f9; }
-.links ul li { isplay: inline-block;padding: 2px 4px; font-size: 13px; }
+.links ul li { display: inline-block;padding: 2px 4px; font-size: 13px; }
+
+@media print, screen and (max-width: 960px) {
+  .link {
+    display: none;
+  }
+}
