--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -1,6 +1,10 @@
 @import "fonts";
 @import "rouge-github";
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #fff;
   padding:50px;
@@ -105,7 +109,7 @@ img {
 }
 
 header {
-  width:270px;
+  width:220px;
   float:left;
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
@@ -121,35 +125,35 @@ header {
 //   width:270px;
 // }
 
-.downloads li {
-  width:89px;
-  float:left;
-  border-right:1px solid #e0e0e0;
-  height:40px;
-}
+// .downloads li {
+//   width:89px;
+//   float:left;
+//   border-right:1px solid #e0e0e0;
+//   height:40px;
+// }
 
-.downloads li:first-child a {
-  border-radius:5px 0 0 5px;
-}
+// .downloads li:first-child a {
+//   border-radius:5px 0 0 5px;
+// }
 
-.downloads li:last-child a {
-  border-radius:0 5px 5px 0;
-}
+// .downloads li:last-child a {
+//   border-radius:0 5px 5px 0;
+// }
 
-.downloads a {
-  line-height:1;
-  font-size:11px;
-  color:#676767;
-  display:block;
-  text-align:center;
-  padding-top:6px;
-  height:34px;
-}
+// .downloads a {
+//   line-height:1;
+//   font-size:11px;
+//   color:#676767;
+//   display:block;
+//   text-align:center;
+//   padding-top:6px;
+//   height:34px;
+// }
 
-.downloads a:hover, .downloads a:focus {
-  color:#675C5C;
-  font-weight:bold;
-}
+// .downloads a:hover, .downloads a:focus {
+//   color:#675C5C;
+//   font-weight:bold;
+// }
 
 // .downloads ul a:active {
 //   background-color:#f0f0f0;
@@ -160,19 +164,19 @@ strong {
   font-weight:700;
 }
 
-.downloads li + li + li {
-  border-right:none;
-  width:89px;
-}
+// .downloads li + li + li {
+//   border-right:none;
+//   width:89px;
+// }
 
-.downloads a strong {
-  font-size:14px;
-  display:block;
-  color:#222;
-}
+// .downloads a strong {
+//   font-size:14px;
+//   display:block;
+//   color:#222;
+// }
 
 section {
-  width:500px;
+  width:580px;
   float:right;
   padding-bottom:50px;
 }
@@ -189,7 +193,7 @@ hr {
 }
 
 footer {
-  width:270px;
+  width:220px;
   float:left;
   position:fixed;
   bottom:50px;
@@ -255,13 +259,13 @@ footer {
     padding:15px;
   }
 
-  .downloads {
-    width:99%;
-  }
+  // .downloads {
+  //   width:99%;
+  // }
 
-  .downloads li, .downloads li + li + li {
-    width:33%;
-  }
+  // .downloads li, .downloads li + li + li {
+  //   width:33%;
+  // }
 }
 
 @media print {
