--- a/_includes/cloud.html
+++ b/_includes/cloud.html
@@ -2,7 +2,7 @@
     <h3>标签云</h3>
     <ul>
         {% for tag in site.tags %}
-            <li><a href="">{{ tag }}</a></li>
+            <li><a href="">{{ tag[0] }}</a></li>
         {% endfor %}
     </ul>
 </div>
